--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ project(inch)
 set(LOCAL_PATH "${CMAKE_SOURCE_DIR}" CACHE STRING "Full path to location of the data_files directory")
 add_definitions(-DLOCAL_PATH=\"${LOCAL_PATH}\")
 
+# Put all binaries in a common location
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
 # Compile against c++11
 set(CMAKE_CXX_STANDARD 11)
 # Use -std=c++11 rather than -std=gnu++11
