--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 # Locate all of the source files
 file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 # Locate all of the header files
--file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/include/*.h)
+file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/include/*.h)
 
 # Set the executable to depend on the sources and headers
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
