Don't use GLOB, it's apparently bad practice

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,68 @@ if ( NOT CMAKE_BUILD_TYPE )
   set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Set the build type to use: Debug (default), Release, RelWithDebInfo, MinSizeRel" FORCE)
 endif ()
 
-# Locate all of the source files
-file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 # Locate all of the header files
-file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/include/*.h)
+# Keep list alphabetical
+set(HEADER_DIR ${PROJECT_SOURCE_DIR}/include)
+set(HEADERS
+  ${HEADER_DIR}/createChart.h
+  ${HEADER_DIR}/extractValue.h
+  ${HEADER_DIR}/functions.h
+  ${HEADER_DIR}/inputs.h
+  ${HEADER_DIR}/nuclide.h
+  ${HEADER_DIR}/partition.h
+  )
+
+# Locate all of the source files
+# Keep list alphabetical
+set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
+set(SOURCES
+  ${SOURCE_DIR}/checkFileExists.cpp
+  ${SOURCE_DIR}/constructChart.cpp
+  ${SOURCE_DIR}/convertFloatToExponent.cpp
+  ${SOURCE_DIR}/convertIsomerEnergyToHuman.cpp
+  ${SOURCE_DIR}/convertSecondsToHuman.cpp
+  ${SOURCE_DIR}/convertSymbolToZ.cpp
+  ${SOURCE_DIR}/convertZToSymbol.cpp
+  ${SOURCE_DIR}/createChart.cpp
+  ${SOURCE_DIR}/createDriplineFile.cpp
+  ${SOURCE_DIR}/createEPSProlog.cpp
+  ${SOURCE_DIR}/createSVGProlog.cpp
+  ${SOURCE_DIR}/createTIKZProlog.cpp
+  ${SOURCE_DIR}/displaySection.cpp
+  ${SOURCE_DIR}/drawEPSDoubleDriplines.cpp
+  ${SOURCE_DIR}/drawEPSDoubleNeutronDripline.cpp
+  ${SOURCE_DIR}/drawEPSDoubleProtonDripline.cpp
+  ${SOURCE_DIR}/drawEPSDripline.cpp
+  ${SOURCE_DIR}/drawEPSGrid.cpp
+  ${SOURCE_DIR}/drawEPSKey.cpp
+  ${SOURCE_DIR}/drawEPSMagicNumbers.cpp
+  ${SOURCE_DIR}/drawEPSRprocess.cpp
+  ${SOURCE_DIR}/drawEPSSingleDriplines.cpp
+  ${SOURCE_DIR}/drawEPSSingleNeutronDripline.cpp
+  ${SOURCE_DIR}/drawEPSSingleProtonDripline.cpp
+  ${SOURCE_DIR}/drawNuclei.cpp
+  ${SOURCE_DIR}/inputs.cpp
+  ${SOURCE_DIR}/main.cpp
+  ${SOURCE_DIR}/nuclide.cpp
+  ${SOURCE_DIR}/partition.cpp
+  ${SOURCE_DIR}/populateInternalMassTable.cpp
+  ${SOURCE_DIR}/readAME.cpp
+  ${SOURCE_DIR}/readNUBASE.cpp
+  ${SOURCE_DIR}/readOWN.cpp
+  ${SOURCE_DIR}/readRProcessData.cpp
+  ${SOURCE_DIR}/setColours.cpp
+  ${SOURCE_DIR}/setEPSKeyText.cpp
+  ${SOURCE_DIR}/setIsotopeAttributes.cpp
+  ${SOURCE_DIR}/setKeyScale.cpp
+  ${SOURCE_DIR}/setNeutronLimits.cpp
+  ${SOURCE_DIR}/validateInputFile.cpp
+  ${SOURCE_DIR}/writeChart.cpp
+  ${SOURCE_DIR}/writeEPS.cpp
+  ${SOURCE_DIR}/writeSVG.cpp
+  ${SOURCE_DIR}/writeTIKZ.cpp
+  )
+
 
 # Set the executable to depend on the sources and headers
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
