Fix typo in build type config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ set(MY_RELEASE_OPTIONS )
 
 target_compile_options(${PROJECT_NAME}
   PUBLIC "$<$<CONFIG:DEBUG>:${MY_DEBUG_OPTIONS}>"
-  PUBLIC "$<$<CONFIG:DEBUG>:${MY_RELEASE_OPTIONS}>")
+  PUBLIC "$<$<CONFIG:RELEASE>:${MY_RELEASE_OPTIONS}>")
 
 # Setup an install target
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
