Make compilation stricter
Mark warnings as errors, we already pass this so lets make sure we don't
introduce code that will make it fail.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include
 
 # Additional flags per build type
 # Lets be as strict as possible
-set(MY_DEBUG_OPTIONS -Wall -Wextra -pedantic-errors)
+set(MY_DEBUG_OPTIONS -Wall -Wextra -Werror -pedantic-errors)
 # Do we need additional release flags? Set up like we do
 set(MY_RELEASE_OPTIONS )
 
