Move free function into class it is almost solely used by

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ set(HEADERS
   ${HEADER_DIR}/createChart.hpp
   ${HEADER_DIR}/converter.hpp
   ${HEADER_DIR}/dripline.hpp
-  ${HEADER_DIR}/extractValue.hpp
+  #${HEADER_DIR}/extractValue.hpp
   ${HEADER_DIR}/functions.hpp
   ${HEADER_DIR}/inputs.hpp
   ${HEADER_DIR}/massTable.hpp
