Move r-process related things into their own class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,12 +47,12 @@ set(HEADERS
   ${HEADER_DIR}/createChart.hpp
   ${HEADER_DIR}/converter.hpp
   ${HEADER_DIR}/dripline.hpp
-  #${HEADER_DIR}/extractValue.hpp
   ${HEADER_DIR}/functions.hpp
   ${HEADER_DIR}/inputs.hpp
   ${HEADER_DIR}/massTable.hpp
   ${HEADER_DIR}/nuclide.hpp
   ${HEADER_DIR}/partition.hpp
+  ${HEADER_DIR}/rProcess.hpp
   ${HEADER_DIR}/symbolConverter.hpp
   )
 
@@ -70,7 +70,6 @@ set(SOURCES
   ${SOURCE_DIR}/drawEPSGrid.cpp
   ${SOURCE_DIR}/drawEPSKey.cpp
   ${SOURCE_DIR}/drawEPSMagicNumbers.cpp
-  ${SOURCE_DIR}/drawEPSRprocess.cpp
   ${SOURCE_DIR}/drawNuclei.cpp
   ${SOURCE_DIR}/dripline.cpp
   ${SOURCE_DIR}/inputs.cpp
@@ -78,6 +77,7 @@ set(SOURCES
   ${SOURCE_DIR}/massTable.cpp
   ${SOURCE_DIR}/nuclide.cpp
   ${SOURCE_DIR}/partition.cpp
+  ${SOURCE_DIR}/rProcess.cpp
   ${SOURCE_DIR}/setEPSKeyText.cpp
   ${SOURCE_DIR}/setIsotopeAttributes.cpp
   ${SOURCE_DIR}/setKeyScale.cpp
