--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,24 @@
+stages:
+  - gcc-build
+
 image: gcc:8
 
-build:
-  stage: build
+gcc-build-Debug:
+  stage: gcc-build
 
   before_script:
-    - apt update && apt -y install cmake make
+    - apt update && apt -y install cmake ninja-build
 
   script:
-    - mkdir ../build && cd ../build && cmake ../$CI_PROJECT_NAME && make
+    - mkdir ../build && cd ../build
+    - cmake -DCMAKE_BUILD_TYPE=Debug ../$CI_PROJECT_NAME && cmake --build .
+
+gcc-build-Release:
+  stage: gcc-build
+
+  before_script:
+    - apt update && apt -y install cmake ninja-build
+
+  script:
+    - mkdir ../build && cd ../build
+    - cmake -DCMAKE_BUILD_TYPE=Release ../$CI_PROJECT_NAME && cmake --build .
