--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 image: ubuntu:latest
 
 before_script:
-  - apt update && apt -y install clang cmake ninja-build
+  - apt update && apt -y install g++ clang cmake ninja-build
 
 gcc-build-Debug:
   stage: gcc-build
