--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ addons:
   
 script:
   - mkdir ../build && cd $_
-  - cmake CXX=/usr/bin/g++-7 ${TRAVIS_BUILD_DIR}
+  - cmake -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 ${TRAVIS_BUILD_DIR}
   - cmake --build .
