--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ language: cpp
 
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
-  - llvm-toolchain-xenial-4.0
-  - llvm-toolchain-xenial-5.0
   - llvm-toolchain-xenial-6.0
-  - llvm-toolchain-xenial-7.0
 
 
 matrix:
@@ -42,15 +39,17 @@ matrix:
           packages: ['g++-8']
       env: COMPILER='g++-8'
 
+
     # LLVM/Clang Builds
 
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: *all_sources
-          packages: ['clang-3.8']
-      env: COMPILER='clang++-3.8'
+    # Compilation fails, not sure if need to fix
+    #- os: linux
+    #  compiler: clang
+    #  addons:
+    #    apt:
+    #      sources: *all_sources
+    #      packages: ['clang-3.8']
+    #  env: COMPILER='clang++-3.8'
 
     - os: linux
       compiler: clang
