--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,30 @@
-image:
+# version string format -- This will be overwritten later anyway
+version: "{build}"
+
+os:
   - Visual Studio 2017
-clone_folder: c:\projects\source
-build_script:
-- cmd: >-
-    mkdir ..\build
-    cd ..\build
-    
-    cmake c:\projects\source -G "Visual Studio 15"
-    
-    cmake --build . --config "Debug"
+  - Visual Studio 2015
+
+install:
+  - git submodule update --init --recursive
+
+# Win32 and x64 are CMake-compatible solution platform names.
+# This allows us to pass %PLATFORM% to CMake -A.
+platform:
+  - Win32
+  - x64
+
+# build Configurations, i.e. Debug, Release, etc.
+configuration:
+  - Debug
+  - Release
+
+#Cmake will autodetect the compiler, but we set the arch
+before_build:
+  - cmake -H. -BBuild -A%PLATFORM%
+
+# build with MSBuild
+build:
+  project: Build\ModernCppCI.sln        # path to Visual Studio solution or project
+  parallel: true                        # enable MSBuild parallel builds
+  verbosity: normal                     # MSBuild verbosity level {quiet|minimal|normal|detailed}
