--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,10 +17,11 @@ platform:
 # build Configurations, i.e. Debug, Release, etc.
 configuration:
   - Debug
-  - Release
+#  - Release
 
 #Cmake will autodetect the compiler, but we set the arch
 before_build:
+  - echo $APPVEYOR_BUILD_FOLDER
   - cmake -H. -B../$(APPVEYOR_BUILD_FOLDER) -A%PLATFORM%
 
 # build with MSBuild
