--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,11 +21,11 @@ configuration:
 
 #Cmake will autodetect the compiler, but we set the arch
 before_build:
-  - echo $APPVEYOR_BUILD_FOLDER
-  - cmake -H. -B../$(APPVEYOR_BUILD_FOLDER) -A%PLATFORM%
+  - echo %APPVEYOR_BUILD_FOLDER%
+  - cmake -H. -B../Build -A%PLATFORM%
 
 # build with MSBuild
 build:
-  project: ../$(APPVEYOR_BUILD_FOLDER)/$(APPVEYOR_PROJECT_NAME).sln  # path to Visual Studio solution or project
+  project: ../Build/$(APPVEYOR_PROJECT_NAME).sln  # path to Visual Studio solution or project
   parallel: true                                                     # enable MSBuild parallel builds
   verbosity: normal                                                  # MSBuild verbosity level {quiet|minimal|normal|detailed}
