Don't install things we definitely won't use

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,14 @@ image: ubuntu:latest
 
 #Install the required packages to run the jobs
 before_script:
-  - apt update && apt -y install g++ clang cmake ninja-build
+  - apt update && apt -y install cmake ninja-build
 
 # GCC
 gcc-build-Debug:
   stage: gcc-build
 
   script:
+    - apt -y install g++
     - mkdir ../build && cd $_
     - cmake -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Debug ../$CI_PROJECT_NAME && cmake --build .
 
@@ -22,6 +23,7 @@ gcc-build-Release:
   stage: gcc-build
 
   script:
+    - apt -y install g++
     - mkdir ../build && cd $_
     - cmake -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_BUILD_TYPE=Release ../$CI_PROJECT_NAME && cmake --build .
 
@@ -30,6 +32,7 @@ clang-build-Debug:
   stage: clang-build
 
   script:
+    - apt -y install clang
     - mkdir ../build && cd $_
     - cmake -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Debug ../$CI_PROJECT_NAME && cmake --build .
 
@@ -37,5 +40,6 @@ clang-build-Release:
   stage: clang-build
 
   script:
+    - apt -y install clang
     - mkdir ../build && cd $_
     - cmake -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/clang++ -DCMAKE_BUILD_TYPE=Release ../$CI_PROJECT_NAME && cmake --build .
