[ci skip] Update appveyor config to not trigger on specific files
Looks like travis and gitlab CI don't have this ability, but we can
add the string "[ci skip]" to the commits message, as we have done
with this commit, to tell them not to tirgger.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,13 @@
 # version string format -- This will be overwritten later anyway
 version: "{build}"
 
+skip_commits:
+  files:
+    - *.md
+    - data_files/*
+    - images/*
+    - scripts/*
+
 os:
   - Visual Studio 2017
   - Visual Studio 2015
