--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,14 @@ stages:
   - gcc-build
   - clang-build
 
-#Full ubuntu image seems a bit heavy handed
-#There is an offical gcc image, but not clang/llvm
-image: ubuntu:latest
-
 #Install the required packages to run the jobs
 before_script:
-  - apt update && apt -y install cmake ninja-build
+  - apt -y install cmake ninja-build
 
 # GCC
 gcc-build-Debug:
   stage: gcc-build
+  image: gcc:8
 
   script:
     - apt -y install g++
@@ -21,6 +18,7 @@ gcc-build-Debug:
 
 gcc-build-Release:
   stage: gcc-build
+  image: gcc:8
 
   script:
     - apt -y install g++
@@ -30,6 +28,7 @@ gcc-build-Release:
 # clang/LLVM
 clang-build-Debug:
   stage: clang-build
+  image: ubuntu:latest
 
   script:
     - apt -y install clang
@@ -38,6 +37,7 @@ clang-build-Debug:
 
 clang-build-Release:
   stage: clang-build
+  image: ubuntu:latest
 
   script:
     - apt -y install clang
